--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "html-pie-context-menu",
-  "version": "0.1.0",
+  "name": "pie-context-menu",
+  "version": "0.3.0",
   "description": "Pie Menu for Webpages",
   "main": "src/pie-cm.js",
   "directories": {
