--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.11",
-    "gulp-minify": "0.0.12"
+    "gulp-minify": "0.0.12",
+    "gulp-rename": "^1.2.2"
   }
 }
